# sptv

./: package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  sptv.db  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  proxy.rs  video.rs
src-tauri/src/db/: db.rs  mod.rs  video_sources.rs  video_urls.rs
src/assets/styles/: global.scss
src/components/: Breadcrumb.vue  Config.vue  Favorite.vue  Home.vue  Setting.vue  VideoPlayer.vue  VideoPlayerNative.vue
src/layouts/: Main.vue
src/pages/: Config.vue  Home.vue  Player.vue
src/pages/Config/: Detail.vue  List.vue
src/stores/: m3u.ts
src/utils/: common.ts  m3u-parser.ts  md5.ts  proxy.ts  video.ts  webgl-renderer.ts  webgl-yuv2rbg-renderer.ts  yuv-webgl-renderer.ts
src/windows/: actions.ts  index.ts
