[package]
name = "sptv"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sptv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
sqlx = { version = "0.8.1", features = ["sqlite", "runtime-tokio"] }
url = "2.5.4"
ffmpeg-next = "7.1.0"                                                # FFmpeg 绑定
wgpu = "24.0.1"                                                      # WGPU 渲染
winit = "0.30"                                                       # 窗口管理
cpal = "0.15"                                                        # 音频播放
